--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,6 +27,18 @@ android {
         }
 
     }
+
+    sourceSets {
+        main {
+            res.srcDirs =
+                    [
+                            'src/main/res/layout/rootelements',
+                            'src/main/res/layout',
+                            'src/main/res'
+                    ]
+        }
+    }
+
 }
 
 dependencies {
