Added android xml formatting for project. Also added the old files to the git ignore

--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,8 @@
 /.idea/workspace.xml
 /.idea/navEditor.xml
 /.idea/assetWizardSettings.xml
+/.idea/jarRepositories.xml.old
+/.idea/vcs.xml.old
 .DS_Store
 /build
 /captures
